--- a/docs/workshop/workshop-2-tracing.ipynb
+++ b/docs/workshop/workshop-2-tracing.ipynb
@@ -56,9 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 Excited to dive into the world of AI agents? These revolutionary systems are transforming how tasks get done! Let's break it down in this thread. 🧵👇\n",
+      "\n",
+      "1/ AI agents are the future! Unlike traditional AI systems that need constant input from users, AI agents autonomously perform tasks by understanding goals and determining the best way to achieve them. #AI #TechTrends\n",
+      "\n",
+      "2/ These intelligent systems interact with their environment, gather data, and learn from feedback. Think of them like little digital assistants with superpowers! 🤖💪 #ArtificialIntelligence #MachineLearning\n",
+      "\n",
+      "3/ From healthcare to software development, AI agents are making waves across various sectors. By using generative AI models and large language models, they continuously improve and adapt. 🌐 #Innovation #TechRevolution\n",
+      "\n",
+      "4/ Curious about real-world applications? Explore open-source AI agent projects on GitHub or see how businesses implement these agents with Azure Cosmos DB! The future of AI is here, and it's smarter than ever! 🚀 #FutureTech #AIagents\n",
+      "\n",
+      "Stay tuned for more insights and advancements in the AI world! 🌟 #TechTwitter #AIrevolution\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -158,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
